--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,6 @@
     <div class="msg-container w-[35rem] h-14 pt-1 text-center rounded-xl bg-slate-900 mx-auto mt-12 text-white text-3xl font-bold">
         <p id="msg"><b>Play your move</b></p>
     </div>
-    <script src="app.js"></script>
+    <script src="/src/app.js"></script>
 </body>
 </html>
