--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     <h1 class="bg-slate-900 text-center w-full text-white font-bold text-3xl md:text-5xl py-3 md:py-5 drop-shadow-md shadow-slate-300">
         Rock Paper Scissors
     </h1>
-
+    <h4 class="text-center text-slate-900 font-bold text-2xl md:text-3xl mt-4 md:mt-6">
+        Computer vs You
+    </h4>
     <!-- Choices Section -->
     <div class="choices w-full md:w-[50rem] h-auto flex items-center justify-center gap-4 md:gap-8 mt-8 md:mt-12 mx-auto">
         <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="rock">
