--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         Rock Paper Scissors
     </h1>
     <h4 class="text-center text-slate-900 font-bold text-2xl md:text-3xl mt-4 md:mt-6">
-        Computer vs You
+        AI vs You
     </h4>
     <!-- Choices Section -->
     <div class="choices w-full md:w-[50rem] h-auto flex items-center justify-center gap-4 md:gap-8 mt-8 md:mt-12 mx-auto">
