--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,16 @@
 
     <script src="/src/app.js"></script>
 <!-- new commit -->
+
+<script>
+    // Get the element with id 'msg'
+    const msgElement = document.getElementById('msg');
+
+    // Add a click event listener to the element
+    msgElement.addEventListener('click', function() {
+        // Change the text when clicked
+        msgElement.innerHTML = '<b>Click any hand gesture</b>';
+    });
+</script>
 </body>
 </html>
