--- a/src/index.html
+++ b/src/index.html
@@ -15,34 +15,47 @@
         AI vs You
     </h4>
     <!-- Choices Section -->
-    <div class="choices w-full md:w-[50rem] h-auto flex items-center justify-center gap-4 md:gap-8 mt-8 md:mt-12 mx-auto">
-        <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="rock">
-            <img src="rr.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
-        </div>
-        <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="paper">
-            <img src="pp.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
-        </div>
-        <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="scissors">
-            <img src="ssss.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
-        </div>
+    <!-- Choices Section -->
+<div class="choices w-full md:w-[50rem] h-auto flex items-center justify-center gap-4 md:gap-8 mt-8 md:mt-12 mx-auto">
+    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="rock">
+        <img src="rr.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
     </div>
+    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="paper">
+        <img src="pp.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
+    </div>
+    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="scissors">
+        <img src="ssss.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
+    </div>
+</div>
 
-    <!-- Score Board -->
-    <div class="score-board mt-8 md:mt-10 mx-auto w-full md:w-[50rem] h-auto flex items-center justify-center gap-12 md:gap-24">
-        <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
-            <p id="user" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
-            <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>user</b></p>
-        </div>
-        <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
-            <p id="comp" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
-            <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>comp</b></p>
-        </div>
+<!-- User and Computer Choices Display -->
+<div class="choices-display w-full md:w-[50rem] h-auto flex items-center justify-center gap-12 md:gap-24 mt-8 md:mt-12 mx-auto">
+    <div class="user-choice-display">
+        <p class="text-center text-slate-900 font-bold text-2xl md:text-3xl">Your Choice</p>
+        <div id="user-choice" class="choice-display flex items-center justify-center h-24 w-24 md:h-40 md:w-40"></div>
     </div>
+    <div class="comp-choice-display">
+        <p class="text-center text-slate-900 font-bold text-2xl md:text-3xl">Computer's Choice</p>
+        <div id="comp-choice" class="choice-display flex items-center justify-center h-24 w-24 md:h-40 md:w-40"></div>
+    </div>
+</div>
 
-    <!-- Message Container -->
-    <div class="msg-container w-full md:w-[35rem] h-12 md:h-14 pt-1 text-center rounded-xl bg-slate-900 mx-auto mt-8 md:mt-12 text-white text-xl md:text-3xl font-bold">
-        <p id="msg"><b>Play your move</b></p>
+<!-- Score Board and Message Container (unchanged) -->
+<div class="score-board mt-8 md:mt-10 mx-auto w-full md:w-[50rem] h-auto flex items-center justify-center gap-12 md:gap-24">
+    <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
+        <p id="user" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
+        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>user</b></p>
     </div>
+    <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
+        <p id="comp" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
+        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>comp</b></p>
+    </div>
+</div>
+
+<!-- Message Container -->
+<div class="msg-container cursor-pointer w-full md:w-[35rem] h-12 md:h-14 pt-1 text-center rounded-xl bg-slate-900 mx-auto mt-8 md:mt-12 text-white text-xl md:text-3xl font-bold">
+    <p id="msg"><b>Play your move</b></p>
+</div>
 
     <script src="/src/app.js"></script>
 <!-- new commit -->
