--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
 </div>
     <!-- Choices Section -->
 <div class="choices w-full md:w-[50rem] h-auto flex items-center justify-center gap-4 md:gap-8 mt-8 md:mt-12 mx-auto">
-    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="rock">
+    <div class="choice cursor-pointer flex items-center h-24 w-24 md:h-40 md:w-40" id="rock">
         <img src="rock.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
     </div>
-    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="paper">
+    <div class="choice cursor-pointer flex items-center h-24 w-24 md:h-40 md:w-40" id="paper">
         <img src="paper.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
     </div>
-    <div class="choice flex items-center h-24 w-24 md:h-40 md:w-40" id="scissors">
+    <div class="choice cursor-pointer flex items-center h-24 w-24 md:h-40 md:w-40" id="scissors">
         <img src="scissors.png" class="rounded-full object-fill hover:border-solid border-4 hover:border-sky-500">
     </div>
 </div>
@@ -57,7 +57,7 @@
     <p id="msg"><b>Play your move</b></p>
 </div>
 
-    <script src="/src/app.js"></script>
+
 <!-- new commit -->
 
 <script>
@@ -70,5 +70,6 @@
         msgElement.innerHTML = '<b>Click any hand gesture</b>';
     });
 </script>
+<script src="/src/app.js"></script>
 </body>
 </html>
