--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,8 @@
         msgElement.innerHTML = '<b>Click any hand gesture</b>';
     });
 </script>
-<script src="/src/app.js"></script>
+<script type="module" src="./app.js"></script>
+
+
 </body>
 </html>
