--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- User and Computer Choices Display -->
-<div class="choices-display w-full md:w-[50rem] h-auto flex items-center justify-center gap-12 md:gap-24 mt-8 md:mt-12 mx-auto">
+<div class="hidden choices-display w-full md:w-[50rem] h-auto items-center justify-center gap-12 md:gap-24 mt-8 md:mt-12 mx-auto">
     <div class="user-choice-display">
         <p class="text-center text-slate-900 font-bold text-2xl md:text-3xl">Your Choice</p>
         <div id="user-choice" class="choice-display flex items-center justify-center h-24 w-24 md:h-40 md:w-40"></div>
@@ -59,7 +59,21 @@
 
 
 <!-- new commit -->
+<script>
+    // Get the choices-display div
+const choicesDisplay = document.querySelector('.choices-display');
 
+// Add event listeners to all choice elements
+const choices = document.querySelectorAll('.choice');
+choices.forEach((choice) => {
+    choice.addEventListener('click', () => {
+        // Remove the 'hidden' class
+        choicesDisplay.classList.remove('hidden');
+        // Add the 'flex' class
+        choicesDisplay.classList.add('flex');
+    });
+});
+</script>
 <script>
     // Get the element with id 'msg'
     const msgElement = document.getElementById('msg');
