--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
 <div class="score-board mt-8 md:mt-10 mx-auto w-full md:w-[50rem] h-auto flex items-center justify-center gap-12 md:gap-24">
     <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
         <p id="user" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
-        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>user</b></p>
+        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>You</b></p>
     </div>
     <div class="score rounded-lg w-24 md:w-32 text-white font-black flex flex-col items-center space-y-4 md:space-y-8">
         <p id="comp" class="w-20 h-20 md:w-28 md:h-24 rounded-2xl pt-4 md:pt-6 text-2xl md:text-4xl text-center items-center bg-slate-800"><b>0</b></p>
-        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>comp</b></p>
+        <p class="text bg-slate-800 text-xl md:text-3xl w-20 md:w-28 rounded-xl text-center h-10 md:h-12 pt-1"><b>AI</b></p>
     </div>
 </div>
     <!-- Choices Section -->
