--- a/src/index.html
+++ b/src/index.html
@@ -5,51 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="input.css">
-    <style>
-        /* General Styles for All Screens */
-.choices-display {
-    display: none; /* Hidden by default */
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center items horizontally */
-    gap: 20px; /* Space between user and computer choices */
-    margin-top: 20px; /* Add some top margin */
-}
-
-.choices-display.flex {
-    display: flex; /* Show when flex class is added */
-}
-
-.user-choice-display,
-.comp-choice-display {
-    text-align: center; /* Center text */
-}
-
-.choice-display {
-    margin-top: 10px; /* Space between text and image */
-}
-
-/* Mobile Styles (Apply to Screens Below 768px) */
-@media (max-width: 768px) {
-    .choices-display {
-        width: 100%; /* Full width on mobile */
-        padding: 0 10px; /* Add some padding */
-    }
-
-    .user-choice-display,
-    .comp-choice-display {
-        width: 100%; /* Full width on mobile */
-    }
-
-    .choice-display {
-        width: 100px; /* Smaller width for mobile */
-        height: 100px; /* Smaller height for mobile */
-    }
-
-    .choices-display p {
-        font-size: 1.2rem; /* Smaller font size for mobile */
-    }
-}
-    </style>
+  
 </head>
 <body class="bg-gradient-to-br from-purple-200 to-cyan-200 via-pink-100">
     <!-- Heading -->
@@ -85,11 +41,11 @@
 
 <!-- User and Computer Choices Display -->
 <div class="hidden choices-display w-full md:w-[50rem] h-auto items-center justify-center gap-12 md:gap-24 mt-8 md:mt-12 mx-auto">
-    <div class="user-choice-display">
+    <div class="user-choice-display text-center">
         <p class="text-center text-slate-900 font-bold text-2xl md:text-3xl">Your Choice</p>
         <div id="user-choice" class="choice-display flex items-center justify-center h-24 w-24 md:h-40 md:w-40"></div>
     </div>
-    <div class="comp-choice-display">
+    <div class="comp-choice-display text-center">
         <p class="text-center text-slate-900 font-bold text-2xl md:text-3xl">Computer's Choice</p>
         <div id="comp-choice" class="choice-display flex items-center justify-center h-24 w-24 md:h-40 md:w-40"></div>
     </div>
