--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,8 @@ choices.forEach((choice) => {
     // Add a click event listener to the element
     msgElement.addEventListener('click', function() {
         // Change the text when clicked
-        msgElement.innerHTML = '<b>Click any hand gesture</b>';
+        msgElement.innerHTML = '<b>click any image to start</b>';
+        msgElement.style.backgroundColor = "purple"
     });
 </script>
 <script type="module" src="./app.js"></script>
